--- a/EndoFish.ipynb
+++ b/EndoFish.ipynb
@@ -25,7 +25,11 @@
         "The following project is to create a visualization based on a grocery store dataset. For my project, I decided to combine this dataset with information on anti-inflammatory foods patients with endometriosis should ideally consume to lessen symptoms.\n",
         "\n",
         "##Sources\n",
-        "Below I will list the academic sources I used to determine what an effective endometriosis anti-inflammatory diet looks like."
+        "Below I will list the academic sources I used to determine what an effective endometriosis anti-inflammatory diet looks like.",
+        "\n",
+        "“Diet and Lifestyle.” The Endo Foundation, <a href="www.theendometriosisfoundation.org/diet-and-lifestyle"> Link</a><p>
+“The Best and Worst Foods for an Anti-Inflammatory Endometriosis Diet.” Cleveland Clinic, <a href="health.clevelandclinic.org/endometriosis-diet">Link</a> 
+<p>“Endometriosis.” World Health Organization, 2023, <a href="https://www.who.int/news-room/fact-sheets/detail/endometriosis">Link</a>
       ],
       "metadata": {
         "id": "hN-vx55wMyNn"
