--- a/EndoFish.ipynb
+++ b/EndoFish.ipynb
@@ -27,9 +27,9 @@
         "##Sources\n",
         "Below I will list the academic sources I used to determine what an effective endometriosis anti-inflammatory diet looks like.",
         "\n",
-        "“Diet and Lifestyle.” The Endo Foundation, <a href="www.theendometriosisfoundation.org/diet-and-lifestyle"> Link</a><p>
-“The Best and Worst Foods for an Anti-Inflammatory Endometriosis Diet.” Cleveland Clinic, <a href="health.clevelandclinic.org/endometriosis-diet">Link</a> 
-<p>“Endometriosis.” World Health Organization, 2023, <a href="https://www.who.int/news-room/fact-sheets/detail/endometriosis">Link</a>
+        "“Diet and Lifestyle.” The Endo Foundation, www.theendometriosisfoundation.org/diet-and-lifestyle\n",
+"“The Best and Worst Foods for an Anti-Inflammatory Endometriosis Diet.” Cleveland Clinic, health.clevelandclinic.org/endometriosis-diet\n", 
+"“Endometriosis.” World Health Organization, 2023, https://www.who.int/news-room/fact-sheets/detail/endometriosis\n",
       ],
       "metadata": {
         "id": "hN-vx55wMyNn"
