--- a/EndoFish.ipynb
+++ b/EndoFish.ipynb
@@ -19,7 +19,7 @@
         "<p>\n",
         "“The Best and Worst Foods for an Anti-Inflammatory Endometriosis Diet.” Cleveland Clinic, <a href=\"health.clevelandclinic.org/endometriosis-diet\">health.clevelandclinic.org/endometriosis-diet</a>\n",
         "<p>\n",
-        "“Endometriosis.” World Health Organization, 2023, https://www.who.int/news-room/fact-sheets/detail/endometriosis "
+        "“Endometriosis.” World Health Organization, 2023, <a href=\"https://www.who.int/news-room/fact-sheets/detail/endometriosis\">https://www.who.int/news-room/fact-sheets/detail/endometriosis</a>"
       ]
     },
     {
